# Vellum

./: .gitignore  .repomixignore  .sync.sh  2026_report  README.md  config.toml  flake.nix  output.json  package-lock.json  package.json  system_prompt.txt
cli_rs/: Cargo.toml  output.jsonl
cli_rs/src/: config.rs  main.rs
cli_rs/src/generate/: adapter.rs  compressor.rs  logic.rs  mod.rs  scanner.rs  writer.rs
cli_rs/src/server/: api.rs  library.rs  mod.rs  mpd_engine.rs  state.rs
cli_rs/src/server/api/: assets.rs  mod.rs  system.rs  websocket.rs
cli_rs/src/server/mpd/: actor.rs
rust/: Cargo.toml  deny.toml  rustfmt.toml
rust/libvellum/: Cargo.toml
rust/libvellum/src/: error.rs  models.rs  sql.rs  utils.rs
rust/libvellum/src/compiler/: manifest.rs  validation.rs
rust/libvellum/src/images/: cover_chroma.rs
rust/src/: config.rs  main.rs  slint_ui.rs
rust/src/compile/: kernel.rs  manifest.rs  mod.rs  native_extensions.rs  nix.rs  resolve.rs  scan.rs  stream.rs  verify.rs
rust/src/compile/builder/: assets.rs  context.rs  mod.rs  scan.rs
rust/src/compile/engine/: mod.rs  stream.rs  verify.rs
rust/src/compile/resolvers/: mod.rs  native.rs  standard.rs
rust/src/egui/: app.rs  mod.rs  navigation.rs  queue.rs  sidebar.rs  text.rs  theme.rs
rust/src/harvest/: mod.rs
rust/src/manifest/: compressor.rs  engine.rs  grouper.rs  mod.rs
rust/src/nix/: mod.rs
rust/src/query/: mod.rs
rust/src/run/: get_cover_palette.rs  get_lyrics.rs  mod.rs
rust/src/server/: mod.rs  state.rs
rust/src/ui/: engine.rs  mod.rs  physics.rs  raster.rs  text.rs
rust/src/update/: mod.rs
rust/vellix/: Cargo.toml
rust/vellix/src/: main.rs
rust/vellum/: Cargo.toml
rust/vellum-cli/: Cargo.toml
rust/vellum-cli/src/: lib.rs  main.rs
rust/vellum-core/: Cargo.toml
rust/vellum-core/src/: error.rs  harvest.rs  lib.rs  models.rs  sentinel.rs  sql.rs
rust/vellum-nix/: Cargo.toml
rust/vellum-nix/src/: main.rs
rust/vellum/src/: config.rs  harvest.rs  lib.rs  main.rs  scanner.rs  sentinel.rs  utils.rs
(+504 files in other folders)
