[package]
name = "vellum_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
dirs = "5.0"

walkdir = "2.4"
rayon = "1.8"
glob = "0.3"

lofty = "0.17"
indicatif = "0.17"
lexical-sort = "0.3"
anyhow = "1.0"
