[package]
name = "vellum_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

walkdir = "2.4"
rayon = "1.8"
glob = "0.3"

lofty = "0.17"
anyhow = "1.0"
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
futures = "0.3.31"
mpd = "0.1.0"
base64 = "0.22.1"
simple_logger = "5.1.0"
log = "0.4.29"
toml = "1.0.1"
parking_lot = "0.12.5"
alphanumeric-sort = "1.5.5"
