[package]
name = "vellix"
version = "0.1.0"
repository = "https://github.com/lewelove/Vellum"
edition = "2024"

[lints]
workspace = true

[dependencies]
vellum = { path = "../vellum" }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0"
sha2 = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.29"
simple_logger = "5.1.0"
clap = { version = "4.4", features = ["derive"] }
regex = "1.11.1"
lava_torrent = "0.9"
sha1 = "0.10"
